# CppCMakeProjectTemplate

./: CMakeLists.txt  README.md
Lib/: CMakeLists.txt  LibSomething.cpp  LibSomething.h
LibTests/: CMakeLists.txt  LibSomethingMainTest.cpp  ReadMe.txt
MainProgram/: CMakeLists.txt  main.cpp
